[project]
name = "authenticator-helper"
version = "0.1.0"
description = "Yubico Authenticator Helper"
authors = [{ name = "Dain Nilsson", email = "dain@yubico.com" }]
requires-python = ">=3.10, <4"
dependencies = [
  "yubikey-manager (>=5.7.0, <6)",
  "fido2 (>=2.0.0, <3)",
  "mss (>=9.0.1, <10)",
  "Pillow (>=10.2.0, <11)",
  "zxing-cpp (>=2.2.0, <3)",
]


[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "helper" }]


[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.10", python = "<3.14" }
pytest = "^8.0.0"
mypy = "^1.7.1"
types-Pillow = "^10.2.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "."
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["smartcard.*", "zxingcpp"]
ignore_missing_imports = true
