[project]
name = "authenticator-helper"
version = "0.1.0"
description = "Yubico Authenticator Helper"
authors = [{ name = "Dain Nilsson", email = "dain@yubico.com" }]
requires-python = ">=3.10, <4"
dependencies = [
  "yubikey-manager>=5.7.0,<6",
  "fido2 (>=2.0.0, <3)",
  "mss (>=9.0.1, <10)",
  "Pillow (>=10.2.0, <11)",
  "zxing-cpp (>=2.2.0, <3)",
  "pyscard (>=2.0, <3)",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.10,<7",
  "mypy>=1.7.1,<2",
  "delocate (>=0.13,<0.14) ; sys_platform == 'darwin'",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "helper" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "."
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["smartcard.*", "zxingcpp"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["I", "S"]
exclude = ["tests/*"]

[tool.pyright]
venvPath = "./helper/"
venv = ".venv"

[tool.uv.sources]
yubikey-manager = { git = "https://github.com/Yubico/yubikey-manager.git" }
